feat: 페어 조회 기능 구현